--- a/Amazon Fine Food Reviews NLP Text Classification-Kaggle.ipynb
+++ b/Amazon Fine Food Reviews NLP Text Classification-Kaggle.ipynb
@@ -1563,7 +1563,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since most research papers have suggested using Bernoulli's Naive Bayes Classifier for text classification, let's give it a try to assess its performance with respect to linear SVM classifier. The reason for high popularity of NB models is that they are simple probablistic models which requires counts of words and n-grams in hash tables. Each word count is treated as separate feature and hence, the feature space consist of total number of distinct words in our entire training set."
+    "Since most research papers have suggested using Bernoulli's Naive Bayes Classifier for text classification, let's give it a try to assess its performance with respect to linear SVM classifier. The reason for high popularity of NB models is that they are simple probablistic models which requires counts of words and n-grams in hash tables. Each word count is treated as separate feature and hence, the feature space consist of total number of distinct words in our entire training set. Hence, let's build a naive bayes model and compare how it performs with respect to our SVM model built above."
    ]
   },
   {
@@ -1836,17 +1836,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that Logistic Regression have performed by far better than all the models (LinearSVM, BernoulliNB, MutinominalNB). Hence we will finalize this project by training our Logistic Regression model over entire training data to achieve best performance."
+    "We can see that Logistic Regression have performed by better than all the models (LinearSVM, BernoulliNB, MutinominalNB). Hence we will finalize this project by training our Logistic Regression model over entire training data to achieve best performance."
    ]
   },
   {
@@ -1867,6 +1860,13 @@
    ],
    "source": [
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since this is a very large dataset, we can split our dataset in 90% as training set and 10% as test. This is due to the reason that it is always advisable to train on as much data as possible and moreover 10% of a larger dataset is enough for our model performance validation."
    ]
   },
   {
