--- a/Amazon Fine Food Reviews NLP Text Classification-Kaggle.ipynb
+++ b/Amazon Fine Food Reviews NLP Text Classification-Kaggle.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "## Introduction and Motivation\n",
-    "This problem dataset was taken from Kaggle website under the name \"Amazon Fine Food Reviews\". The motivation was to have an hands-on experience with a good Natural Language Processing problem along with sentiment analysis. Using the analysis in this work, a prediction model can be made to predict a recommendation/sentiment as either positive or negative."
+    "This problem dataset was taken from Kaggle website under the name \"**Amazon Fine Food Reviews**\". The motivation was to have an hands-on experience with a good Natural Language Processing problem along with sentiment analysis. Using the analysis in this work, a prediction model can be made to predict a recommendation/sentiment as either positive or negative."
    ]
   },
   {
@@ -27,9 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\yarathor\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
+      "C:\\Users\\yarathor\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\grid_search.py:42: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
+      "  DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -63,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -286,7 +297,7 @@
        "9  This is a very healthy dog food. Good for thei...  "
       ]
      },
-     "execution_count": 270,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,115 +318,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Therefore, for our text classification task of a review, we will try to use supervised learning where we will use \"Summary\" columns as our features and \"Score\" columns as class labels. We could have used the \"Text\" column as well along with \"Summary\" column  which contains a more detailed review for a particluar product for a better analysis but I will go on with only \"Summary\" as of now. Moreover, for simplicity purpose, we will convert our Scores as \"positive\" for scores higher than or equal to 3 and \"negative\" to all cases otherwise. This is make this classification problem from mulitclass classification to binary classification problem. "
+    "Therefore, for our text classification task of a review, we will try to use **supervised learning** where we will use \"**Summary**\" columns as our features and \"**Score**\" columns as class labels. We could have used the \"Text\" column as well along with \"Summary\" column  which contains a more detailed review for a particluar product for a better analysis but I will go on with only \"Summary\" as of now. Moreover, for simplicity purpose, we will convert our Scores as \"**positive**\" for scores higher than or equal to 3 and \"**negative**\" to all cases otherwise. This is to make this classification problem from mulitclass classification to binary classification problem. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Score</th>\n",
-       "      <th>Summary</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Good Quality Dog Food</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Not as Advertised</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>\"Delight\" says it all</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Cough Medicine</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Great taffy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Nice Taffy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Great!  Just as good as the expensive brands!</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Wonderful, tasty taffy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Yay Barley</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Healthy Dog Food</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Score                                        Summary\n",
-       "0      5                          Good Quality Dog Food\n",
-       "1      1                              Not as Advertised\n",
-       "2      4                          \"Delight\" says it all\n",
-       "3      2                                 Cough Medicine\n",
-       "4      5                                    Great taffy\n",
-       "5      4                                     Nice Taffy\n",
-       "6      5  Great!  Just as good as the expensive brands!\n",
-       "7      5                         Wonderful, tasty taffy\n",
-       "8      5                                     Yay Barley\n",
-       "9      5                               Healthy Dog Food"
-      ]
-     },
-     "execution_count": 271,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-6fae94b3c442>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
-    "df=df_temp.iloc[:,[6,8]]\n",
     "df.head(10)"
    ]
   },
@@ -450,7 +373,9 @@
   {
    "cell_type": "code",
    "execution_count": 273,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Score=df['Score']\n",
@@ -569,7 +494,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It seems that the classes for this problem are imbalanced in nature. Hence only predicting accuracy for a particular class might not be good measure to predict model performance. Hence, while building our models, we need to make sure that that we employ other performance metrics such as f1_score which is the weighted average of precision and recall and confusion matrix to get better insight than traditional accuracy metric."
+    "It seems that the classes for this problem are **imbalanced** in nature. Hence only predicting accuracy for a particular class might not be good measure to predict model performance. Hence, while building our models, we need to make sure that that we employ other performance metrics such as **f1_score** which is the **weighted average of precision and recall** and confusion matrix to get better insight than traditional accuracy metric."
    ]
   },
   {
@@ -583,7 +508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we can plot some wordcloud from our positive and negative class and see which words occur in greater frequency. Plotting wordcloud gives an interesting insight and can tell us what words can better describe a review as a positive or a negative feedback. However, it should be noted that users generally use many stopwords which occur more frequently and don't give too much information for our analysis. Hence we will perform some cleaning to make sure only meaningful words appear in our wordclouds."
+    "Next we can plot some wordcloud from our positive and negative class and see which words occur in greater frequency. Plotting wordcloud gives an interesting insight and can tell us what words can better describe a review as a positive or a negative feedback. However, it should be noted that users generally use many **stopwords** which occur more frequently and don't give too much information for our analysis. Hence we will perform some cleaning to make sure only meaningful words appear in our wordclouds."
    ]
   },
   {
@@ -698,7 +623,7 @@
    "source": [
     "### Cleaning and Preprocessing the data\n",
     "\n",
-    "We can see in our \"Summary\" column that users have submitted their reviews in various styles using upper-case and punctuations. We need to process them to a common (lower-case) case. The purpose for doing this is to make the models interprets \"great\" and \"GREAT\" as a same entity. We will use python re module to get rid of punctuations and upper-case letters from our summary."
+    "We can see in our \"Summary\" column that users have submitted their reviews in various styles using upper-case and punctuations. We need to process them to a common (lower-case) case. The purpose for doing this is to make the models interprets \"great\" and \"GREAT\" as a same entity. We will use **python re module** to get rid of punctuations and upper-case letters from our summary."
    ]
   },
   {
@@ -1423,7 +1348,9 @@
   {
    "cell_type": "code",
    "execution_count": 292,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Score=sampledf['Score']\n",
@@ -1872,7 +1799,9 @@
   {
    "cell_type": "code",
    "execution_count": 300,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Score=df['Score']\n",
